--- a/src/app/components/crear-producto/crear-producto.component.html
+++ b/src/app/components/crear-producto/crear-producto.component.html
@@ -1,1 +1,29 @@
-<p>crear-producto works!</p>
+<div class="container mt-5">
+    <div class="row">
+        <div class="col-lg-6 offset-lg-3">
+            <div class="card">
+                <div class="card-body text-center">
+                    <span class="titulo">Crear producto</span>
+                    <form class="mt-3">
+                        <div class="mb-3">
+                            <label for="exampleInputEmail1" class="form-label">producto</label>
+                            <input type="text" class="form-control form-control-lg" placeholder="producto">
+                        </div>
+                        <div class="mb-3">
+                            <label for="exampleInputEmail1" class="form-label">categoria</label>
+                            <input type="text" class="form-control form-control-lg" placeholder="categoria">
+                        </div>
+                        <div class="mb-3">
+                            <label for="exampleInputEmail1" class="form-label">ubicacion</label>
+                            <input type="text" class="form-control form-control-lg" placeholder="ubicacion">
+                        </div>
+                        <div class="mb-3">
+                            <label for="exampleInputEmail1" class="form-label">precio</label>
+                            <input type="number" class="form-control form-control-lg" placeholder="precio">
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
