--- a/src/app/components/listar-productos/listar-productos.component.html
+++ b/src/app/components/listar-productos/listar-productos.component.html
@@ -4,7 +4,7 @@
             <div class="card">
                 <div class="card-body text">
                     <span class="titulo">Lista de productos</span>
-                    <button class="btn btn-succes">Nuevo</button>
+                    <button class="btn btn-success float-end">Nuevo</button>
                     <table class="table table-stripped mt-5">
                         <thead>
                           <tr>
@@ -20,8 +20,8 @@
                             <td>Nike</td>
                             <td>Guadalajara</td>
                             <td>800</td>
-                            <td><i class="fa-solid fa-pen-to-square"></i>
-                                <i class="fa-solid fa-trash"></i>  
+                            <td><i class="fas fa-solid fa-pen-to-square text-primary"></i>
+                                <i class="fas fa-solid fa-trash text-danger"></i>  
                             </td>
                           </tr>
                           <tr>
@@ -29,9 +29,9 @@
                             <td>Puma</td>
                             <td>Monterrey</td>
                             <td>1000</td>
-                            <td><i class="fa-solid fa-pen-to-square"></i>
-                                <i class="fa-solid fa-trash"></i>  
-                            </td>
+                            <td><i class="fas fa-solid fa-pen-to-square text-primary"></i>
+                              <i class="fas fa-solid fa-trash text-danger"></i>  
+                          </td>
                           </tr>
                         </tbody>
                       </table>
