--- a/src/app/components/crear-producto/crear-producto.component.html
+++ b/src/app/components/crear-producto/crear-producto.component.html
@@ -21,6 +21,10 @@
                             <label for="exampleInputEmail1" class="form-label">precio</label>
                             <input type="number" class="form-control form-control-lg" placeholder="precio">
                         </div>
+                        <div class="mb-3">
+                            <button routerLink="/" routerLinkActive="router-link-active"  class="btn btn-secondary btn-lg float-start">regresar</button>
+                            <button class="btn btn-success btn-lg float-end">enviar</button>
+                        </div>
                     </form>
                 </div>
             </div>
