--- a/src/app/components/listar-productos/listar-productos.component.html
+++ b/src/app/components/listar-productos/listar-productos.component.html
@@ -4,7 +4,7 @@
             <div class="card">
                 <div class="card-body text">
                     <span class="titulo">Lista de productos</span>
-                    <button class="btn btn-success float-end">Nuevo</button>
+                    <button class="btn btn-success float-end" routerLink="/crear-producto">Nuevo</button>
                     <table class="table table-stripped mt-5">
                         <thead>
                           <tr>
@@ -12,7 +12,6 @@
                             <th scope="col">categoria</th>
                             <th scope="col">ubicacion</th>
                             <th scope="col">precio</th>
-                            <th scope="col"><i class="fa-solid fa-trash"></i></th>
                         </thead>
                         <tbody>
                           <tr>
